Workaround: using JDK_JAVA_OPTIONS instead of JAVA_OPTS